fix: links to api doc are now underlined in user profile

--- a/app/assets/stylesheets/dmpopidor/_user_profile.scss
+++ b/app/assets/stylesheets/dmpopidor/_user_profile.scss
@@ -4,4 +4,9 @@
   .profile-form {
     @include dmpopidor-accordion-large;
   }
+  #api-token {
+    a {
+      text-decoration: underline;
+    }
+  }
 }
