--- a/app/views/branded/shared/export/_export_by_research_output.erb
+++ b/app/views/branded/shared/export/_export_by_research_output.erb
@@ -21,6 +21,9 @@
       <% blank = answer.present? ? answer.blank? : true %>
       <% options = answer.present? ? answer.question_options : [] %>
       <% fragment = answer.present? ? answer.madmp_fragment : nil %>
+      
+      <% next if  @plan.template.structured? && should_hide_question(question, research_output) %>
+
       <%  unless @show_unanswered == false && blank  %>
         <div class="question">
           <% if !@public_plan && @show_sections_questions%>
