--- a/app/views/plans/_request_feedback_form.html.erb
+++ b/app/views/plans/_request_feedback_form.html.erb
@@ -11,7 +11,7 @@
        }
        %>
        </p>
-      <div class="well well-sm">
+      <div class="card bg-light mb-3 p-2">
         <%= sanitize plan.owner.org.feedback_msg.to_s % { user_name: current_user.name(false), plan_name: plan.title, organisation_email: current_user.org.contact_email } %>
       </div>
       <p><%= _('You can continue to edit and download the plan in the interim.') %></p>
