[4.1] Remove template name conversion (#321)
* refactor: removed template_name conversion during MadmpSchema loading process

* feat: added by_name route in madmp_schemas_controller

* feat: dynamic forms now uses template_name instead of schema_id

* chore: updated submodule

* refactor: further changes for template_name support

--- a/app/views/branded/shared/export/_display_madmp_fragment.erb
+++ b/app/views/branded/shared/export/_display_madmp_fragment.erb
@@ -15,10 +15,10 @@
           <td class="property-value"><%= value ? _('Yes') : _('No') %></td>
         </tr>
       <% when 'array' %>
-        <% if prop['items']['type'] == 'object' && prop['items']['schema_id'].present? %>
-          <% next if MadmpSchema.find(prop['items']['schema_id']).classname.eql?("contributor") %>
+        <% if prop['items']['type'] == 'object' && prop['items']['template_name'].present? %>
+          <% next if MadmpSchema.find_by(name: prop['items']['template_name']).classname.eql?("contributor") %>
           <%
-            sub_schema = sub_schemas[prop['items']['schema_id']]
+            sub_schema = sub_schemas[prop['items']['template_name']]
             table_header = prop["table_header@#{locale}"] ? prop["table_header@#{locale}"] : prop["table_header"]
             values = []
             if value.present?
