--- a/react-client/src/pages/dashboard/dashboard.scss
+++ b/react-client/src/pages/dashboard/dashboard.scss
@@ -262,3 +262,9 @@
   padding: 2rem 2rem;
   background-color: #fcfcfc;
 }
+#quick-view-backdrop{
+      background: rgb(0, 0, 0, 0.3);
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
