--- a/react-client/src/pages/dashboard/dashboard.scss
+++ b/react-client/src/pages/dashboard/dashboard.scss
@@ -268,3 +268,8 @@
     height: 100%;
     position: relative;
 }
+.quick-view-loader{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
