Updated TypeAhead to force users to make a selection from the dropdown, or select 'Other' option, which will add the name, description, and url fields for the user to complete

--- a/react-client/src/components/typeahead.scss
+++ b/react-client/src/components/typeahead.scss
@@ -43,6 +43,7 @@
     cursor: pointer;
     height: 100%;
     transition: transform 0.2s linear;
+    padding: 0.5rem 1rem;
   }
   
   .autocomplete__dropdown-arrow.expanded {
