--- a/react-client/src/pages/dashboard/dashboard.scss
+++ b/react-client/src/pages/dashboard/dashboard.scss
@@ -271,6 +271,10 @@
   margin-left: 2rem;
 }
 
+.related-works-details {
+  display: block;
+}
+
 @media screen and (min-width: 700px) {
   .filter-clear-all-button {
     margin-left: 2rem;
