--- a/react-client/src/pages/dashboard/dashboard.scss
+++ b/react-client/src/pages/dashboard/dashboard.scss
@@ -259,28 +259,39 @@
   }
 }
 
-#quick-view-view h3 {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  flex-wrap: nowrap;
-}
+#quick-view-view {
+  h3 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    flex-wrap: nowrap;
 
-#quick-view-view h3 .form-actions {
-  margin-top: 0;
-  padding-top: 0;
-  padding-left: 0;
-}
+    .form-actions {
+      margin-top: 0;
+      padding-top: 0;
+      padding-left: 0;
 
-#quick-view-view h3 .form-actions button {
-  margin-top: 0;
-  padding: 0.25rem 0.5rem;
-  font-size: 1rem;
-}
+      button {
+        border-radius: 50%;
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        height: 32px;
+        width: 32px;
+        font-size: .8rem;
+        padding: 0;
 
-#quick-view-view p.preview-grant {
-  max-width: 100%;
-  overflow-wrap: anywhere;
+        &:hover {
+          background-color: #ccc;
+        }
+      }
+    }
+  }
+
+  p.preview-grant {
+    max-width: 100%;
+    overflow-wrap: anywhere;
+  }
 }
 
 .filter-tags {
