Fix Bullet warnings
This commit resolves the following Bullet warnings:

app/controllers/guidances_controller.rb:
```
user: aaron
GET /org/admin/guidance/8/admin_index
AVOID eager loading detected
GuidanceGroup => [:org]
Remove from your query: .includes([:org])
Call stack
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/paginable/guidance_groups/_index.html.erb:14:in `_app_views_paginable_guidance_groups__index_html_erb___3322052074018023941_1096140'
/home/aaron/Documents/GitHub/roadmap_upstream/app/controllers/concerns/paginable.rb:85:in `paginable_renderise'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/guidances/admin_index.html.erb:18:in `_app_views_guidances_admin_index_html_erb__3034911713227401125_1096100'
```

app/controllers/org_admin/phases_controller.rb:
```
user: aaron
GET /org_admin/templates/3964/phases/4030/edit
USE eager loading detected
Section => [:phase]
Add to your query: .includes([:phase])
Call stack
/home/aaron/Documents/GitHub/roadmap_upstream/app/helpers/sections_helper.rb:26:in `draggable_for_section?'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/org_admin/sections/_section_group.html.erb:13:in `block in _app_views_org_admin_sections__section_group_html_erb__2045624839743196431_1209660'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/org_admin/sections/_section_group.html.erb:6:in `each'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/org_admin/sections/_section_group.html.erb:6:in `_app_views_org_admin_sections__section_group_html_erb__2045624839743196431_1209660'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/org_admin/sections/_index.html.erb:18:in `block in _app_views_org_admin_sections__index_html_erb___1139332918399225100_1209640'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/org_admin/sections/_index.html.erb:17:in `_app_views_org_admin_sections__index_html_erb___1139332918399225100_1209640'
/home/aaron/Documents/GitHub/roadmap_upstream/app/views/org_admin/phases/contain

--- a/app/views/super_admin/api_clients/_form.html.erb
+++ b/app/views/super_admin/api_clients/_form.html.erb
@@ -1,7 +1,7 @@
 <%
 url = @api_client.new_record? ? super_admin_api_clients_path : super_admin_api_client_path(@api_client)
 method = @api_client.new_record? ? :post : :put
-orgs = Org.where(is_other: false)
+orgs = Org.includes(identifiers: :identifier_scheme).where(is_other: false)
 %>
 
 <%= form_for @api_client, url: url, method: method,
