--- a/app/assets/stylesheets/dmptool_v5/overrides.scss
+++ b/app/assets/stylesheets/dmptool_v5/overrides.scss
@@ -51,6 +51,10 @@ body {
   @extend .dmpui-frontend-btn-secondary;
 }
 
+div.dmpui-field-fileinput-group input[type='file'] {
+  opacity: 100%;
+}
+
 /* Dropdown menus */
 .dmpui-dropdown {
   position: relative;
