Update to answers and plans controllers and added an index to the settings table

--- a/app/views/plans/_download_form.html.erb
+++ b/app/views/plans/_download_form.html.erb
@@ -42,7 +42,7 @@
           <%= _('unanswered questions') %>
         <% end %>
       </div>
-      <% if @plan.research_outputs.any? %>
+      <% if @has_research_outputs %>
         <div class="form-check">
           <%= label_tag 'export[research_outputs]', class:'form-check-label' do %>
             <%= check_box_tag 'export[research_outputs]', true, true %>
