Refactor/optimise check for `question_options`
- Replaced `.length > 0` with `.any?` to improve readability and performance.
- `.any?` is more efficient for checking if a collection has elements, especially for ActiveRecord associations, as it doesn't require loading the entire collection into memory.

--- a/app/views/org_admin/phases/_phase.html.erb
+++ b/app/views/org_admin/phases/_phase.html.erb
@@ -53,7 +53,7 @@
                       <% section.questions.each do |question| %>
                         <li>
                           <%= sanitize question.text %>
-                          <% if question.question_options.length > 0 %>
+                          <% if question.question_options.any? %>
                             <ul>
                               <% question.question_options.by_number.each do |option| %>
                                 <li><%= option.text %></li>
