Fix and refactor ordering of template associations
- Removed `.order()` as it was only applied to the main phases query and did not guarantee the order of associated records (e.g., `question_options`), which are loaded in separate queries.

- `default_scope { order(number: :asc) }` already exists for the `Phase`, `Section`, and `Question` models, ensuring the desired ordering by default.

- The `QuestionOption` model includes  `scope :by_number, -> { order(:number) }`, which is now explicitly applied when fetching the `question_options` association to enable proper ordering.

- `.order()` must've been auto-including `:id` in the `.select()` clause. Since it is required, we are explicitly adding it now.

--- a/app/views/org_admin/phases/_phase.html.erb
+++ b/app/views/org_admin/phases/_phase.html.erb
@@ -55,7 +55,7 @@
                           <%= sanitize question.text %>
                           <% if question.question_options.length > 0 %>
                             <ul>
-                              <% question.question_options.each do |option| %>
+                              <% question.question_options.by_number.each do |option| %>
                                 <li><%= option.text %></li>
                               <% end %>
                             </ul>
