Retain :f filter on /org_admin/templates/ Search
This commit retains the selected 'Published', 'Unpublished', or 'Not customized' filter when using the search on the paths /org_admin/templates, org_admin/templates/organisational, and org_admin/templates/customisable. Previously, the search would ignore the filter and return all templates.

--- a/app/views/shared/_search.html.erb
+++ b/app/views/shared/_search.html.erb
@@ -17,6 +17,8 @@
         <%= label_tag(:filter_admin, _('Only Show Admins'), class: 'form-check-label') %>
       </div>
     <% end %>
+    <%# :f corresponds to the "Published" vs "Unpublished" etc. filters defined on the org_admin/templates pages %>
+    <%= hidden_field_tag :f, params[:f] if params[:f].present? %>
       <%= submit_tag(_('Search'), class: 'btn btn-secondary ms-2') %>
     </div>
   </div>
