Fix issues with Conditional question serialization (offered by @briri
        from DMPTool).nBased on DMPtool commit CDLUC3#667.

        Changes proposed in this PR (text from cited PR):
           - There is a migration file with code for MySQL and Postgres to update the Conditions table to convert JSON Arrays in string format records in the conditions table so that they are JSON Arrays.
           - Updated the form partials in app/views/org_admin/conditions/_form.erb.rb to properly send condition data to the controller.
           - Removed all JSON.parse calls in the app/helpers/conditions.rb helper
           - The user canno longer edit a condition. They need to remove it
             and create a new condition. This applies to the email for 'add
    notifications' too.

        Made the following changes to simplify this patch and to make it a little more user friendly:

           - The "Add Conditions" button will now say "Edit Conditions" if there are any conditions for a given question.
           - Updated the column heading over the "thing that happens when the condition is met" from "Remove" to "Target" since the content of the column can either be questions being removed or an email notification being sent.
           - Conditions of any action type can be added or removed (not updated anymore).
           - Hovering over the email of an existing condition displays a tooltip that shows the email message, subject, etc. The email content can no longer be edited once saved. It will need to be removed and re-created.
           - We allow only one question option to be selected when adding a Condition unlike inthe DMPTool version because experience with multiple options chosen has been problematic and buggy when used by users in DMPOnline.
           - To add a condition you must have selected an Option and Action together with:
              o if Action is 'remove', you need to select one or more choices in Target.
              o if Action is 'add noti

--- a/app/views/org_admin/questions/_form.html.erb
+++ b/app/views/org_admin/questions/_form.html.erb
@@ -45,8 +45,10 @@
         <%= render "/org_admin/question_options/option_fields", f: f, q: question %>
         <!--display for selecting comment box when multiple choice is being used-->
       </div>
+    
       <% if question.id != nil && question.question_options[0].text != nil %>
-        <%= link_to _('Add Conditions'), org_admin_question_open_conditions_path(question_id: question.id, conditions: conditions), class: "add-logic btn btn-secondary", 'data-loaded': (conditions.size > 0).to_s, remote: true %>
+        <% cond_lbl = (!conditions.nil? && conditions.any?) ? 'Edit Conditions' : 'Add Conditions' %>
+        <%= link_to cond_lbl, org_admin_question_open_conditions_path(question_id: question.id, conditions: conditions), class: "add-logic btn btn-secondary", 'data-loaded': (conditions.size > 0).to_s, remote: true %>
         <div id="content" class="col-md-offset-2">
           <p>
             <%= render partial: 'org_admin/conditions/container', locals: { f: f, question: question, conditions: conditions } %>
@@ -54,7 +56,7 @@
         </div>
       <% else %>
         <div class="form-control mb-3" data-toggle="tooltip", title="<%= _('Save this question before adding conditions.') %>" >
-          <%= link_to _('Add Conditions'), '#', class: "add-logic btn btn-secondary disabled" %>
+          <%= link_to _('Edit Conditions'), '#', class: "add-logic btn btn-secondary disabled" %>
         </div>
       <% end %>
     </div>
