--- a/app/views/org_admin/conditions/_add.html.erb
+++ b/app/views/org_admin/conditions/_add.html.erb
@@ -1,5 +1,12 @@
 <div class="row">
   <div class="col-md-12 mt-2">
     <%= link_to _('Add condition'), new_org_admin_question_condition_path(question_id: question.id, condition_no: condition_no), remote: true, class: "add-condition" %> 
+    <p>To add a condition you must have selected an Option and Action together with
+      <ul>
+        <li>if Action is 'remove', you need to select one or more choices in Target.</li>
+        <li>if Action is 'add notification', you need to fill in all the fields in the 'Send email' popup.</li>
+      </ul>
+      Otherwise, the condition will not be saved.
+    </p>
   </div>
 </div>
