--- a/app/views/super_admin/users/_email_confirmation_status.html.erb
+++ b/app/views/super_admin/users/_email_confirmation_status.html.erb
@@ -1,9 +1,11 @@
 <div class="form-group col-xs-12">
     <%= f.label(:confirmed_at, _('Email Confirmation Status'), class: 'control-label') %>
     <br>
-    <%= f.check_box(:confirmed_at, { checked: @user.confirmed?, 
+    <% is_checkbox_disabled = @user.can_super_admin? && @user.confirmed_at.present? %>
+    <%= f.check_box(:confirmed_at, { checked: @user.confirmed?,
+                                     disabled: is_checkbox_disabled,             
                                      style: 'vertical-align: middle;
                                              margin-top: -2px;' }) %>
     <%= @user.confirmed? ? _("Confirmed.") : _("Unconfirmed.") %>
-    <small><%= _("(Use checkbox to change status.)") %></small>
+    <%= content_tag(:small, _("(Use checkbox to change status.)")) unless is_checkbox_disabled %>
 </div>
