--- a/app/views/org_admin/conditions/_form.html.erb
+++ b/app/views/org_admin/conditions/_form.html.erb
@@ -1,3 +1,8 @@
+<%# This partial is called from the following files:
+    - app/controllers/org_admin/conditions_controller.rb
+    - app/views/org_admin/conditions/_container.html.erb
+    %>
+
 <% condition ||= nil %>
 
 <div class="row condition-partial mb-3">
