--- a/app/views/org_admin/conditions/_form.html.erb
+++ b/app/views/org_admin/conditions/_form.html.erb
@@ -10,9 +10,8 @@
     action_type_arr = [["removes", :remove], ["adds notification", :add_webhook]]
     name_start = "conditions[#{condition_no.to_s}]"
     remove_question_collection = later_question_list(question)
-    condition_exists = local_assigns.has_key? :condition
-    type_default = condition_exists ? (condition[:action_type] == "remove" ? :remove : :add_webhook) : :remove
-    remove_question_group = condition_exists ?
+    type_default = condition.present? ? (condition[:action_type] == "remove" ? :remove : :add_webhook) : :remove
+    remove_question_group = condition.present? ?
       grouped_options_for_select(remove_question_collection, condition[:remove_question_id]) :
       grouped_options_for_select(remove_question_collection)
     view_email_content_info = _("Hover over the email address to view email content. To change email details you need to remove and add the condition again.")
@@ -25,7 +24,7 @@
     <div class="col-md-9 pe-2">
       <div class="form-label bold"><%= _('Option') %></div>
       <%= select_tag(:question_option, options_from_collection_for_select(question.question_options.sort_by(&:number), "id", "text",
-          condition_exists ? condition[:question_option_id] : question.question_options.sort_by(&:number)[0]), {class: 'form-select regular', 'data-bs-style': 'dropdown-toggle bg-white px-4 py-3', name: name_start + "[question_option][]"}) %>
+          condition.present? ? condition[:question_option_id] : question.question_options.sort_by(&:number)[0]), {class: 'form-select regular', 'data-bs-style': 'dropdown-toggle bg-white px-4 py-3', name: name_start + "[question_option][]"}) %>
     </div>
     <div class="col-md-3 pe-2">
       <div class="form-label bold"><%= _('Action') %></div>
