Remove redundant conditional check
- Line 35 is the only that uses the `remove_question_group` variable. However, line 35 is only executed when `condition.nil? == true` (line 18).

--- a/app/views/org_admin/conditions/_form.html.erb
+++ b/app/views/org_admin/conditions/_form.html.erb
@@ -10,9 +10,7 @@
     action_type_arr = [["removes", :remove], ["adds notification", :add_webhook]]
     name_start = "conditions[#{condition_no.to_s}]"
     remove_question_collection = later_question_list(question)
-    remove_question_group = condition.present? ?
-      grouped_options_for_select(remove_question_collection, condition[:remove_question_id]) :
-      grouped_options_for_select(remove_question_collection)
+    remove_question_group = grouped_options_for_select(remove_question_collection)
     view_email_content_info = _("Hover over the email address to view email content. To change email details you need to remove and add the condition again.")
   %>
   
