--- a/app/views/org_admin/conditions/_new_condition_form.erb
+++ b/app/views/org_admin/conditions/_new_condition_form.erb
@@ -1,3 +1,9 @@
+  <%
+    action_type_arr = [["removes", :remove], ["adds notification", :add_webhook]]
+    remove_question_collection = later_question_list(question)
+    remove_question_group = grouped_options_for_select(remove_question_collection)
+  %>
+
   <div class="form-label bold">Add condition</div>
   <div class="row  mb-3">
     <div class="col-md-9 pe-2">
