--- a/app/views/org_admin/conditions/_new_condition_form.erb
+++ b/app/views/org_admin/conditions/_new_condition_form.erb
@@ -4,7 +4,7 @@
     remove_question_group = grouped_options_for_select(remove_question_collection)
   %>
 
-  <div class="form-label bold">Add condition</div>
+  <div class="form-label bold"> <%= _('Add condition') %> </div>
   <div class="row  mb-3">
     <div class="col-md-9 pe-2">
       <div class="form-label bold"><%= _('Option') %></div>
