[DATALAD RUNCMD] run codespell throughout fixing few left typos automagically
=== Do not change lines below ===
{
 "chain": [],
 "cmd": "codespell -w",
 "exit": 0,
 "extra_inputs": [],
 "inputs": [],
 "outputs": [],
 "pwd": "."
}
^^^ Do not change lines above ^^^

--- a/app/assets/stylesheets/blocks/_cards.scss
+++ b/app/assets/stylesheets/blocks/_cards.scss
@@ -33,7 +33,7 @@
   color: $color-secondary-text;
 }
 
-// Classes from Boostrap 3 panels (renamed card) - interim solution
+// Classes from Bootstrap 3 panels (renamed card) - interim solution
 .card-default {
   border-color: #ddd;
   border-radius: 0rem;
