--- a/app/views/plans/_project_details.html.erb
+++ b/app/views/plans/_project_details.html.erb
@@ -6,7 +6,7 @@ project_abstract_tooltip = _("Briefly summarise your research project to help ot
 id_tooltip = _('A pertinent ID as determined by the funder and/or organisation.')
 ethics_tooltip = _("Whether there are any potential ethical issues related to data that this DMP describes")
 ethics_description_tooltip = _("Description of the ethical issues")
-ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics commitee")
+ethics_report_tooltip = _("Link to a protocol from a meeting with an ethics committee")
 %>
 
 <div class="form-control mb-3"><!-- title -->
