--- a/app/views/user_mailer/permissions_change_notification.html.erb
+++ b/app/views/user_mailer/permissions_change_notification.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= _('Hello %{recepientname}') %{ recepientname: @recepient.name } %>
+  <%= _('Hello %{recepientname}') %{ recepientname: @recipient.name } %>
 </p>
 <p>
   <%= _('Your permissions relating to %{plan_title} have changed. You now have %{type} access. This means you can %{placeholder1} %{placeholder2}') % {
