--- a/app/assets/stylesheets/blocks/_labels.scss
+++ b/app/assets/stylesheets/blocks/_labels.scss
@@ -1,7 +1,7 @@
 @import "../../../../node_modules/bootstrap/scss/functions";
 @import "../../../../node_modules/bootstrap/scss/variables";
 
-/* label stlying */
+/* label styling */
 label {
   font-weight: 700;
 }
