Improve styling consistency between headings
- This change improves the styling/positioning between the "Optional plan components" and "Select phase to download" headings.
  - Added "form-control" class to "Optional plan components" heading to match "Select phase to download" stylings
  - Replaced `<legend>` element with a `label_tag`+ `form-label` class to again improve consistency between the two headings.
    - Note, the added `label_tag` doesn't associate with any specific form control, so the first paramater is left empty.

--- a/app/views/plans/_download_form.html.erb
+++ b/app/views/plans/_download_form.html.erb
@@ -16,9 +16,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-lg-6">
+      <div class="form-control col-sm-12 col-lg-6">
         <fieldset>
-          <legend><%= _("Optional plan components") %></legend>
+          <%= label_tag('', _("Optional plan components"), class: 'form-label') %>
           <div class="form-check">
             <%= label_tag 'export[project_details]', class:'form-check-label' do %>
               <%= check_box_tag 'export[project_details]', true, download_coversheet_tickbox_checked %>
