--- a/app/views/answers/_new_edit.html.erb
+++ b/app/views/answers/_new_edit.html.erb
@@ -1,6 +1,6 @@
-<%# locals: { template, question, answer, readonly, locking } %>
+<%# locals: { template, question, answer, readonly, locking, base_template_org } %>
 <!--
-  This partial creates a form for each type of question. The local variables are: plan, answer, question, readonly
+  This partial creates a form for each type of question.
 -->
 <!-- Question text -->
 <% q_format = question.question_format %>
