Fix accessibility and preserve aligned headings
- Commit 72c251977af5513ca9947b6ae753132a8a6d4deb improved the alignment between the 'Optional plan components' and 'Select phase to download' headings. However, the change from <legend> to an unreferenced label_tag() hurt the accessibility.

- This change puts back the <legend> tag and uses class: 'col-form-label' for both of the aforementioned headings to maintain stylistic consistency between the two elements.
  - `.col-form-label` overrides <legend> styling to maintain consistent alignment with <label> elements.

- Accessibility snapshot of <fieldset> before this fix:
Name: ""
aria-labelledby: Not specified
aria-label: Not specified
From legend: Not specified
title: Not specified
Role: group
Invalid user entry: false

- Accessibility snapshot of <fieldset> after this fix:
Name: "Optional Plan Components"
aria-labelledby: Not specified
aria-label: Not specified
From legend: legend.col-form-label "Optional Plan Components"
title: Not specified
Role: group
Invalid user entry: false
Labeled by: legend.col-form-label

--- a/app/views/plans/_download_form.html.erb
+++ b/app/views/plans/_download_form.html.erb
@@ -18,7 +18,7 @@
     <div class="row">
       <div class="form-control col-sm-12 col-lg-6">
         <fieldset>
-          <%= label_tag('', _("Optional plan components"), class: 'form-label') %>
+          <legend class="col-form-label"><%= _("Optional plan components") %></legend>
           <div class="form-check">
             <%= label_tag 'export[project_details]', class:'form-check-label' do %>
               <%= check_box_tag 'export[project_details]', true, download_coversheet_tickbox_checked %>
@@ -58,7 +58,7 @@
       <%= hidden_field_tag 'export[form]', true %>
       <% if @phase_options.length > 1 %>
         <div class="form-control col-sm-12 col-lg-6">
-          <%= label_tag(:phase_id, _("Select phase to download"), class: 'form-label') %>
+          <%= label_tag(:phase_id, _("Select phase to download"), class: 'col-form-label') %>
           <%= select_tag(:phase_id, options_for_select(@phase_options, @phase_options[0]), class: 'form-select') %>
         </div>
       <% else %>
